addQuiz overflow fixed

--- a/frontend/src/components/Sidebar/AdminSidebar.css
+++ b/frontend/src/components/Sidebar/AdminSidebar.css
@@ -52,7 +52,7 @@
   }
   
   .admin-sidebar li:hover {
-    border-color: #007bff;
+    border-color: white;
   }
   
   
